Add code for bottom half of header
Add image of mountain as well

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left-header">
             Header Logo
         </div>
-        
+
         <ul class="right-header">
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
@@ -22,6 +22,19 @@
       </div>
 
       <div class="header-bottom">
+        <div class="left-header">
+          <div class="header-main-text">This website is awesome</div>
+          <div class="header-secondary-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus debitis praesentium, perferendis vitae incidunt ipsam odio fugit molestiae doloremque, esse odit! Accusantium accusamus pariatur laborum corrupti totam dolor, suscipit consectetur?</div>
+          <button>Sign up</button>
+
+
+        </div>
+
+        <div class="right-header">
+          <img src="images/mountain.jpg" alt="beautiful mountain">
+
+
+        </div>
 
 
 
