add second container
add header and add 4 boxes as well as subtitles

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
   <body>
     <div class="header-container">
       <div class="header-top">
-        <div class="left-header">
-            Header Logo
-        </div>
-
+        <div class="left-header">Header Logo</div>
         <ul class="right-header">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
         </ul>
       </div>
 
@@ -26,26 +23,45 @@
           <div class="header-main-text">This website is awesome</div>
           <div class="header-secondary-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus debitis praesentium, perferendis vitae incidunt ipsam odio fugit molestiae doloremque, esse odit! Accusantium accusamus pariatur laborum corrupti totam dolor, suscipit consectetur?</div>
           <button>Sign up</button>
-
-
         </div>
 
         <div class="right-header">
           <img src="images/mountain.jpg" alt="beautiful mountain">
+        </div>
+      </div>
+    </div>
 
-
+    <div class="container-one">
+      <div class="container-one-top">
+        Some random information
+      </div>
+      <div class="container-one-bottom">
+        <div class="card">
+          <div class="blue-box"></div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="blue-box"></div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="blue-box"></div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="blue-box"></div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
 
-
-
       </div>
+    
+  
     </div>
     
 
 
 
 
-    </div>
 
   </body>
 </html>
