--- a/index.html
+++ b/index.html
@@ -52,8 +52,19 @@
           <div class="blue-box"></div>
           <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
-
       </div>
+    </div>
+    <div class="container-two">
+      <div class="container-two-top">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non unde iusto nemo doloremque eligendi mollitia fugiat consectetur in hic modi aliquid dolorum 
+      </div>
+      <div class="container-two-bottom">
+        -Spongebob, Squarepants
+      </div>
+
+
+
+
     
   
     </div>
